--- a/package.json
+++ b/package.json
@@ -1,20 +1,11 @@
 {
   "name": "sia-absen",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "version": "1.6.9",
+  "private": true,
   "dependencies": {
+    "express": "^4.19.1",
     "body-parser": "^1.20.2",
     "crypto-js": "^4.1.1",
-    "ejs": "^3.1.9",
-    "express": "^4.19.1",
-    "nodemon": "^3.0.1"
+    "ejs": "^3.1.9"
   }
 }
